--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,26 +26,22 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    viewBinding{
+    viewBinding {
         enabled = true
     }
 }
 
 dependencies {
-
-    // Android
-    implementation "androidx.appcompat:appcompat:$appcompat_version"
+// Androidimplementation
+    "androidx.appcompat:appcompat:$appcompat_version"
     implementation "com.google.android.material:material:$material_version"
     implementation "androidx.constraintlayout:constraintlayout:$constraint_version"
-
-    // Navigation
-    implementation "androidx.navigation:navigation-fragment:$nav_version"
+    // Navigationimplementation
+    "androidx.navigation:navigation-fragment:$nav_version"
     implementation "androidx.navigation:navigation-ui:$nav_version"
-
-    // Retrofit
-    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    // Retrofitimplementation
+    "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-moshi:$retrofit_version"
-
-    // Glide
-    implementation "com.github.bumptech.glide:glide:$glide_version"
+    // Glideimplementation
+    "com.github.bumptech.glide:glide:$glide_version"
 }
