--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ android {
 
 dependencies {
 // Androidimplementation
+    implementation 'com.google.android.gms:play-services-maps:18.1.0'
     "androidx.appcompat:appcompat:$appcompat_version"
     implementation "com.google.android.material:material:$material_version"
     implementation "androidx.constraintlayout:constraintlayout:$constraint_version"
@@ -45,4 +46,5 @@ dependencies {
     // Glideimplementation
     "com.github.bumptech.glide:glide:$glide_version"
     implementation "com.google.android.material:material:1.8.0"
+    implementation 'androidx.appcompat:appcompat:1.6.1'
 }
