--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,13 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".Map"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".Friend"
             android:exported="false">
             <meta-data
@@ -50,11 +57,11 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="AIzaSyBJP4imOGavZvpcVEXG-6sR7LjsXONxF8s" />
         </activity>
+
+        <meta-data
+            android:name="android.app.lib_name"
+            android:value="AIzaSyBJP4imOGavZvpcVEXG-6sR7LjsXONxF8s" />
     </application>
 
 </manifest>
