--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,5 +43,6 @@ dependencies {
     "com.github.bumptech.glide:glide:$glide_version"
     implementation "com.google.android.material:material:1.8.0"
     implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation "androidx.recyclerview:recyclerview:1.3.0"
 
 }
